tests/errors/4_type_errors/boolop-test9.ifj.java
class Main { 
    static void run() {
        boolean a = 5; // int to boolean
    }
}